# ewt-gen

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: website.yml
src/ewt/: cli.py  generator.py
src/ewt/templates/: index.html
