[project]
name = "ewt"
version = "0.1.0"
description = "Generate static websites for ESPHome firmware distribution using ESP Web Tools"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
ewt-gen = "ewt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ewt"]
